style: update game style

--- a/games/guessing-game.html
+++ b/games/guessing-game.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/guessing-game.css" />
     <title>Number Guessing Game</title>
   </head>
   <body>
+    <a href="../index.html"
+      ><i class="fa-solid fa-house-chimney home-button"></i
+    ></a>
     <div class="main-container">
       <h1>Guess the Number!</h1>
       <p>Try to guess the number I'm thinking of between 1 and 100.</p>
