--- a/games/rock-paper-scissors-game.html
+++ b/games/rock-paper-scissors-game.html
@@ -10,6 +10,9 @@
     />
     <title>Rock Paper Scissors Game</title>
   </head>
+  <a href="../index.html"
+    ><i class="fa-solid fa-house-chimney home-button"></i
+  ></a>
   <body>
     <div class="main">
       <h1>Rock Paper Scissors Game</h1>
