--- a/games/clicker-game.html
+++ b/games/clicker-game.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/clicker-game.css" />
     <title>Clicker Games</title>
   </head>
   <body>
+    <a href="../index.html"
+      ><i class="fa-solid fa-house-chimney home-button"></i
+    ></a>
     <div class="main">
       <h1>Clicker Games</h1>
       <p>Click the button to earn points!</p>
